[package]
name = "bliss-learner"
version = "0.1.0"
authors = ["chrober"]
edition = "2021"
license = "GPL-3.0-only"
description = "Metric learning for bliss-mixer"

[profile.release]
strip = true

[dependencies]
argparse = "0.2.2"
rusqlite = { version = "0.34.0", features = ["bundled"] }
ndarray = "0.16.1"
serde_json = "1.0"
ureq = "2.4.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
libm = "0.2"
